adding bootstrap sass

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,4 @@
-%h1==Home
+%h1==Humblebrag
 %p
-	This is a homepage
+	Share your best travel photos and win a trip somewhere amazing. 
+= link_to "Sign up now", "#"
