--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,2 +1,16 @@
-= link_to "Home", root_path
-= link_to "About", about_path
+.navbar.navbar-fixed-top
+  .navbar-inner
+    .container
+      %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      %a.brand{:href => "/"} Humblebrag
+      .nav-collapse
+        %ul.nav
+          %li
+            = link_to 'Home',  root_path
+          %li
+            = link_to 'About',  about_path
+        %ul.nav.pull-right
+          %li= link_to 'Login',  '#'
