adding simple form

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,12 +5,17 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{:href => "/"} Humblebrag
+      .brand
+        = link_to 'Humblebrag',  root_path
+
       .nav-collapse
         %ul.nav
-          %li
-            = link_to 'Home',  root_path
-          %li
-            = link_to 'About',  about_path
+          %li= link_to 'About',  about_path
+          %li= link_to 'Contact',  "#"
+
         %ul.nav.pull-right
-          %li= link_to 'Login',  '#'
+          -if user_signed_in?
+            %li= link_to 'Logout',  destroy_user_session_path, method: :delete
+            %li=link_to 'Edit Profile', edit_user_registration_path
+          -else
+            %li= link_to 'Login',  new_user_session_path
