--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,8 +1,15 @@
+$btnPrimaryBackground: purple;
+
 @import 'bootstrap';
 
 body {
   
   padding-top: 60px;
+
+.hero-unit {
+	background-color: $black;
+	color: $white;
+	}
 }
 
 @import 'bootstrap-responsive';
@@ -10,6 +17,7 @@ body {
 .footer{
     margin-top: 50px;
     color: $grayLight;
-    a{
+    a {
         color: $gray;
-}
+    }
+  }
