add pins scaffold

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -6,6 +6,6 @@
     %h1 
       Humblebrag.
     %p
-      Show the world where you've been.
+      A ceebration of shameless exhibitionism.
     %p
       = link_to 'Sign up now!',  new_user_registration_path, class: "btn btn-large btn-primary"
