add pins association

--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -12,8 +12,9 @@
     %tr
       %td= pin.description
       %td= link_to 'Show', pin
-      %td= link_to 'Edit', edit_pin_path(pin)      
-      %td= link_to 'Destroy', pin, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      -if current_user == pin.user
+        %td= link_to 'Edit', edit_pin_path(pin)      
+        %td= link_to 'Destroy', pin, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 
   = link_to 'New Pin', new_pin_path
