--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -4,5 +4,8 @@
       %p
       = @pin.description
       %p
-      = link_to 'Edit', edit_pin_path(@pin)
-      = link_to 'Back', pins_path
+      = @pin.user.name
+      %p
+      -if current_user == @pin.user
+        = link_to 'Edit', edit_pin_path(@pin)
+        = link_to 'Back', pins_path
