--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -3,6 +3,7 @@
 %table.table.table.striped
   .thead
     %tr
+      %th Image
       %th Description
       %th
       %th
@@ -10,6 +11,7 @@
   .tbody
   - @pins.each do |pin|
     %tr
+      %td= image_tag pin.image(:medium)
       %td= pin.description
       %td= link_to 'Show', pin
       -if current_user == pin.user
